# rnix-x86

./: Cargo.toml  Makefile  README.md  bochsrc  bx_enh_dbg.ini  i686-unknown-none.json
.cargo/: config
notes/: 任务调度.md
src/bootloader/: boot.asm  loader.asm
src/kernel/: lang_items.rs  lib.rs  start.asm
src/kernel/console/: buffer.rs  constants.rs  mod.rs
src/kernel/global_descriptor/: constants.rs  descriptor_table.rs  mod.rs
src/kernel/interrupt/: constants.rs  descriptor_table.rs  handler.asm  mod.rs  pic.rs
src/kernel/io/: io.s  mod.rs
src/kernel/memory/: address_range_descriptor.rs  constants.rs  memory_state.rs  mod.rs
src/kernel/sync/: mod.rs  up_safe_cell.rs
src/kernel/task/: constants.rs  mod.rs  pcb.rs  switch.s
